<resources>
    <string name="app_name">PETBook</string>
    <string name="title_activity_my_events">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pantalla_first_view">Pantalla First View</string>
    <string name="start">Start</string>
    <string name="pantalla_my_calendar">Pantalla My Calendar</string>
    <string name="pantalla_my_events">Pantalla My Events</string>
    <string name="pet1">Pet1</string>
    <string name="pantalla_my_pets">Pantalla My pets</string>
    <string name="pantalla_my_posts">Pantalla My posts</string>
    <string name="my_pets">My Pets</string>
    <string name="my_posts">My Posts</string>
    <string name="my_calendar">My Calendar</string>
    <string name="my_events">My Events</string>
    <string name="pantalla_home">Pantalla Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="pantalla_log_sign">Pantalla Log Sign</string>
    <string name="pantalla_sign_up">Pantalla Sign Up</string>
    <string name="pantalla_pet1">Pantalla Pet1</string>
    <string name="todo">TODO</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="the_passsword_is_incorrect">the passsword is incorrect</string>
    <string name="the_username_is_incorrect">the username is incorrect</string>
    <string name="log_in">Log in</string>
    <!-- Strings related to register -->
    <string name="register_header">Registro de usuario</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="email">E-mail</string>
    <string name="password1">Password</string>
    <string name="password2">Password repeat</string>
    <string name="birthday">Birthday</string>
    <string name="register_action">Registrarse</string>
    <string name="title_activity_pets">Pets</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Type">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Turtle</item>
        <item>Horse</item>
        <item>Duck</item>
        <item>Hamster</item>
        <item>Rabbit</item>
        <item>Other</item>
    </string-array>
    <string-array name="TypeSite">
        <item>Select one type of place</item>
        <item>Park</item>
        <item>Veterinary Clinic</item>
        <item>Pet Shop</item>
        <item>Hairdressing for animals</item>
        <item>Animal association</item>
        <item>Other</item>
    </string-array>
    <string name="Sex">Sex</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="title_activity_new__suggested_site">New_SuggestedSite</string>



















    <!-- Calendar Sync -->
    <string name="accounts">Accounts</string>
    <string name="description_add">Add Calendar</string>
    <string name="summary">Title</string>
    <string name="summary_hint">Enter the calendar title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="batchadd">Copy Calendar x3 (Batch)</string>
    <string name="edit">Edit Calendar</string>
    <string name="delete">Delete Calendar</string>
    <string name="delete_title">Delete Calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>


    <string-array name="inputPetType">
        <item>No selection</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Turtle</item>
        <item>Horse</item>
        <item>Duck</item>
        <item>Hamster</item>
        <item>Rabbit</item>
        <item>Other</item>
    </string-array>
</resources>
