<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <View style="@style/TitleBarSpring" />

        <ProgressBar
            android:id="@+id/title_refresh_progress"
            style="@style/TitleBarProgressIndicator"
            android:visibility="gone" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_separator_desc" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="   Sincronizacion en curso con Google CALENDAR\n   Vuelve para atras para continuar usando la aplicacion" />

    <ListView
        android:id="@+id/list"
        android:layout_width="112dp"
        android:layout_height="210dp" />

</LinearLayout>