<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icono_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_searchUsers"
            android:icon="@drawable/icon_friend_requests"
            android:title="Search Users" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/participantes"
            android:title="My Friends" />
        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/pets"
            android:title="@string/my_pets" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/icono_eventos"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_calendar" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icono_mapa"
            android:title="Map" />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_menu_send"
            android:title="Forum" />

        <item
            android:id="@+id/nav_interest"
            android:icon="@drawable/ic_menu_send"
            android:title="Interest Sites" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icono_cerrar_sesion"
            android:title="Log out" />

    </group>

</menu>
